@@ -211,11 +211,17 @@ require_localnet_session = "true"
 ; music. If none of the listed tags are found then
 ; ampache will default to the first tag format
 ; that was found. 
-; POSSIBLE VALUES: id3v1 id3v2 file vorbiscomment 
-;                  quicktime ape asf 
-; DEFAULT: id3v2,id3v1 vorbiscomment quicktime ape
-; 		asf file
-tag_order = "id3v2,id3v1,vorbiscomment,quicktime,ape,asf,file"
+; POSSIBLE VALUES: ape asf avi id3v1 id3v2 lyrics3 mpeg quicktime riff
+;     vorbiscomment
+; DEFAULT: id3v2 id3v1 vorbiscomment quicktime ape asf avi mpeg riff
+getid3_tag_order = "id3v2,id3v1,vorbiscomment,quicktime,ape,asf,avi,mpeg,riff"
+
+; This determines the order in which metadata sources are used (and in the
+; case of plugins, checked)
+; POSSIBLE VALUES (builtins): filename and getID3
+; POSSIBLE VALUES (plugins): MusicBrainz, plus any others you've installed.
+; DEFAULT: getID3 filename
+metadata_order = "getID3,filename"
 
 ; Un comment if don't want ampache to follow symlinks
 ; DEFAULT: false
