@@ -20,6 +20,8 @@ The following public methods may be implemented:
 
 Finally, for the plugin to actually be useful one or more of the following hooks
 should be implemented as a public method:
+    get_metadata(Array $metadata)
+        The passed array contains the best metadata we've got.
     save_rating(Rating $rating, int $new_value)
     save_songplay(Song $song)
 
